Fix issue: background image overflow
On screens with a large aspect-ratio the background image is overflowing

Fix the size of the container and the max size of the image

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1096,13 +1096,15 @@ main {
 .restaurant-menu__image {
   position: absolute;
   left: 0;
-  right: auto;
+  right: 0;
   top: 0;
-  bottom: auto;
+  bottom: 0;
   z-index: -1;
 }
 .restaurant-menu__image img {
   width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 .restaurant-menu__title {
   color: inherit;
