--- a/sass/layout/_restaurant-menu.scss
+++ b/sass/layout/_restaurant-menu.scss
@@ -8,11 +8,13 @@
     @include flexbox($direction: column, $align-items: stretch);
 
     &__image {
-        @include position($top: 0, $left: 0);
+        @include position($top: 0, $left: 0, $right: 0, $bottom: 0);
         z-index: -1;
 
         img {
             width: 100%;
+            max-height: 100%;
+            object-fit: cover;
         }
     }
 
